--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(241, 226, 151);
+  background-color: #f8e8a6;
   font-family: Arial, sans-serif;
   text-align: center;
 }
