--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ p {
 }
 
 .croissant-photo {
-  max-width: 100px;
+  max-width: 100%;
   border-radius: 10px;
   display: block;
   margin: 30px auto;
